# SkinFixer

./: .gitignore  BUILDING.md  Makefile  README.md  build.gradle  gradle.properties  plugininfo.json  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  minecraft-version-request.md
.github/workflows/: gradle.yml  release.yml
Spigot_1_16_R1/: build.gradle
Spigot_1_16_R2/: build.gradle
Spigot_1_16_R3/: build.gradle
lib/: Cargo.toml
lib/src/: config.rs  lib.rs
lib/src/database/: mod.rs  profile.rs  skins.sql
lib/src/jni/: del_skin_profile.rs  get_skin_profile.rs  init.rs  mod.rs  set_skin_profile.rs
src/main/java/dev/array21/skinfixer/: SkinChangeHandler.java  SkinFixer.java  SkinObject.java
src/main/java/dev/array21/skinfixer/annotations/: Nullable.java
src/main/java/dev/array21/skinfixer/apis/: MojangApi.java  RemotePluginInfo.java  SkinFixerApi.java
src/main/java/dev/array21/skinfixer/commands/: CommandHandler.java  CommandInfo.java  GetCodeCommandExecutor.java  ResetSkinCommandExecutor.java  SetSkinCommandExecutor.java  SkinFixerCommandExecutor.java  Subcommand.java
src/main/java/dev/array21/skinfixer/common/: AddNewSkin.java
src/main/java/dev/array21/skinfixer/config/: ConfigHandler.java  ConfigManifest.java  DatabaseType.java  DiscordSettings.java  SqlSettings.java
src/main/java/dev/array21/skinfixer/discord/: JdaHandler.java
src/main/java/dev/array21/skinfixer/events/: PlayerJoinEventListener.java
src/main/java/dev/array21/skinfixer/gson/: GetSkinResponse.java  MojangAuthResponse.java
src/main/java/dev/array21/skinfixer/language/: LangHandler.java  LanguageModel.java
src/main/java/dev/array21/skinfixer/reflect/: PlayerManager.java  PlayerProfile.java  ReflectException.java
src/main/java/dev/array21/skinfixer/util/: Pair.java  (+3 more)
src/main/java/nl/thedutchmc/BaseBukkitPlugin/: BaseBukkitPlugin.java  ConfigurationHandler.java
src/main/java/nl/thedutchmc/SkinFixer/: ConfigurationHandler.java  JdaHandler.java  SkinFixer.java  SkinObject.java  StorageHandler.java
src/main/resources/: config.yml  en.yml  log4j.properties  plugin.yml  storage.yml
(+79 files in other folders)
