[package]
name = "skinfixer"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

[lib]
name = "skinfixer"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jni = "0.19.0"
postgres = "0.19.1"
bincode = "1.3.3"
lazy_static = "1.4.0"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.typenum]
version = "1.14.0"
features = ["no_std"]

[dependencies.mysql]
version = "21.0.2"
default-features = false

[patch.crates-io.mysql]
git = "https://github.com/TheDutchMC/rust-mysql-simple"

[profile.release]
lto = true
panic = "abort"