[package]
name = "skinfixer"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"

[lib]
name = "skinfixer"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jni = "0.19.0"
postgres = "0.19.1"
bincode = "1.3.3"
lazy_static = "1.4.0"

[dependencies.mysql]
version = "22.0.0"
default-features = false

[dependencies.flate2]
version = "1.0.22"
features = ["zlib"]

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.typenum]
version = "1.14.0"
features = ["no_std"]

[profile.release]
lto = true
panic = "abort"