[package]
name = "skinfixer"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2021"

[lib]
name = "skinfixer"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
jni = "0.19.0"
postgres = "0.19.1"
bincode = "1.3.3"
lazy_static = "1.4.0"
sqlx = { version = "0.7.2", features = ["any", "mysql", "postgres", "sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.188", features = ["derive"] }
typenum = { version = "1.17.0", features = ["no_std"] }
tokio = { version = "1.33.0", features = ["fs", "rt", "rt-multi-thread"] }
thiserror = "1.0.49"

[profile.release]
lto = true
panic = "abort"